# capgeminiopt

./: .gitignore  README.md
cuda/: CMakeLists.txt
cuda/common/: MathTypesUtils.cpp  MathTypesUtils.h  OsUtilsCuda.cpp  OsUtilsCuda.h
cuda/task1/: TaskCuda1.cu
cuda/task3/: TaskCuda3.cu  TaskCuda3Utils.h
cuda/task4/: TaskCuda4.cu
linuxasm/: Makefile  readme.md  stdiox64.asm  sys_codes.inc  task1x32.asm  task1x64.asm  task2x32.asm  task2x64.asm  task3x32.asm  task4x32.asm  task5x32.asm  task6x64.asm  unistd_64h.inc  x32compile.sh  x32link.sh  x64compile.sh  x64link.sh
samples/cuda/: TaskCuda3 - Copy (2).cu  TaskCuda3 - Copy.cu  usingtextures.cu
winsimd/: CMakeLists.txt
winsimd/common/: CpuFeatures.h  SimdRoutines.h  Utils.h
winsimd/task1.1/: CMakeLists.txt  task1.cpp  task1Old.cpp  task1Old2.cpp
winsimd/task2.1/: CMakeLists.txt  task2.1.cpp  task2.1Old.cpp
winsimd/task3.1/: CMakeLists.txt  task3.1 - Copy.cpp  task3.1.cpp
