# build
cmake_minimum_required (VERSION 3.29)
project("winsimd" CXX)
enable_testing()

set(CMAKE_CXX_STANDART 17)
set(CMAKE_CXX_STANDART_REQUIRED ON)

#
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task1.1)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task1.asm)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task2.1)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task3.1)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task4.1)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task5.1)

#set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_APP_NAME})
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT "task1.1")



